# deep-algo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README-deployment.md  README.md  SECURITY_REVIEW_2_2D.md  SECURITY_REVIEW_MOMENTUM.md  docker-compose.yml  justfile  liblib.rlib  specs
crates/arbitrage-cross/: Cargo.toml
crates/arbitrage-cross/src/: detector.rs  executor.rs  fees.rs  lib.rs  matcher.rs  reconciler.rs  types.rs
crates/backtest/: Cargo.toml
crates/backtest-scheduler/: Cargo.toml
crates/backtest-scheduler/src/: lib.rs  scheduler.rs
crates/backtest/src/: data_provider.rs  execution.rs  lib.rs  metrics.rs
crates/backtest/src/binary/: bootstrap.rs  edge.rs  engine.rs  entry_strategy.rs  fees.rs  metrics.rs  mod.rs  monte_carlo.rs  outcome.rs  pit.rs  regimes.rs  walk_forward.rs
crates/bot-orchestrator/: Cargo.toml  README.md
crates/bot-orchestrator/migrations/: 20251007000001_create_bots.sql
crates/bot-orchestrator/src/: bot_actor.rs  bot_database.rs  bot_handle.rs  commands.rs  events.rs  execution_wrapper.rs  lib.rs  registry.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  tui_backtest_manager.rs  tui_live_bot.rs
crates/cli/src/commands/: approve_allowances.rs  arbitrage_bot.rs  backfill_funding.rs  backfill_ohlcv.rs  backfill_signals.rs  binary_backtest.rs  calculate_returns.rs  check_depth.rs  clob_timing.rs  collect_polymarket.rs  collect_signals.rs  cross_arbitrage.rs  cross_market_auto.rs  cross_market_backtest.rs  cross_market_scanner.rs  cross_market_settle.rs  data_status.rs  directional_auto.rs  directional_settle.rs  entry_strategy_sim.rs  gabagool_auto.rs  gabagool_monitor.rs  latency_monitor.rs  mod.rs  phase1_arbitrage.rs  polymarket_paper_trade.rs  preflight.rs  redeem_positions.rs  test_order.rs  validate_signals.rs  window_timing.rs
crates/cli/src/tui_backtest/: mod.rs  runner.rs  screens.rs
crates/cli/tests/: integration_test.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  config_loader.rs  config_watcher.rs  engine.rs  events.rs  kelly.rs  lib.rs  metrics_formatter.rs  position.rs  position_sizing.rs  signal.rs  traits.rs  validation.rs
crates/data/: Cargo.toml
crates/data/src/: chainlink.rs  clob_snapshot.rs  csv_storage.rs  database.rs  lib.rs  parquet_storage.rs  settlement.rs  window_settlement.rs
crates/data/src/models/: cross_market.rs  cvd_aggregate.rs  funding.rs  liquidation.rs  mod.rs  news.rs  orderbook.rs  paper_trade.rs  polymarket.rs  signal_snapshot.rs  trade.rs  trade_tick.rs
crates/data/src/repositories/: cross_market_repo.rs  cvd_repo.rs  funding_repo.rs  liquidation_repo.rs  mod.rs  news_repo.rs  ohlcv_repo.rs  orderbook_repo.rs  paper_trade_repo.rs  polymarket_repo.rs  signal_snapshot_repo.rs  trade_repo.rs  trade_tick_repo.rs
crates/exchange-hyperliquid/: Cargo.toml
crates/exchange-hyperliquid/src/: client.rs  data_provider.rs  execution.rs  lib.rs  paper_execution.rs  signing.rs  wallet.rs  websocket.rs
crates/exchange-ib/: Cargo.toml
crates/exchange-ib/src/: account.rs  client.rs  execution.rs  lib.rs  market_data.rs  options_chain.rs  paper.rs  types.rs
crates/exchange-kalshi/: Cargo.toml  SECURITY_REVIEW.md
crates/exchange-kalshi/src/: auth.rs  client.rs  error.rs  executor.rs  lib.rs  types.rs
crates/exchange-polymarket/: Cargo.toml
crates/exchange-polymarket/src/: client.rs  clob_price_collector.rs  gamma.rs  lib.rs  models.rs  odds_collector.rs  websocket.rs  window_settlement_collector.rs
crates/exchange-polymarket/src/arbitrage/: approvals.rs  auto_executor.rs  book_feed.rs  circuit_breaker.rs  clob_auth.rs  clob_timing_runner.rs  correlation_tracker.rs  cross_market_auto_executor.rs  cross_market_detector.rs  cross_market_runner.rs  cross_market_settlement.rs  cross_market_types.rs  data_service.rs  detector.rs  directional_detector.rs  directional_executor.rs  directional_runner.rs  dual_leg_executor.rs  eip712.rs  execution.rs  gabagool_detector.rs  gabagool_runner.rs  latency_detector.rs  latency_runner.rs  live_executor.rs  metrics.rs  mod.rs  orderbook.rs  paper_executor.rs  phase1_config.rs  polygon_tx.rs  position_persistence.rs  presigned_orders.rs  rate_limiter.rs  (+10 more)
crates/exchange-polymarket/tests/: arbitrage_integration.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
crates/options-manager/: Cargo.toml
crates/options-manager/src/: allocation.rs  correlation.rs  executor.rs  lib.rs  monitor.rs  service.rs  stops.rs  targets.rs  types.rs
crates/signals/: Cargo.toml
crates/signals/src/: common.rs  context_builder.rs  funding.rs  lib.rs  liquidations.rs  registry.rs  trades.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs  ma_crossover.rs  quad_ma.rs  risk_manager.rs
crates/token-selector/: Cargo.toml
crates/token-selector/src/: lib.rs  selector.rs
crates/web-api/: Cargo.toml
crates/web-api/src/: data_health.rs  handlers.rs  lib.rs  server.rs  websocket.rs
python/: .gitignore  pyproject.toml
python/agents/: __init__.py  analyst.py  base.py  critic.py  researcher.py  reviewer.py  risk_checker.py
python/dashboard/: app.py  auth.py  serialization.py
python/dashboard/routes/: portfolio.py  positions.py  research.py  system.py
python/db/: __init__.py  feedback.py  memory.py  repositories.py
python/ib/: client.py  contract_selector.py  paper.py  position_manager.py  rules.py  types.py
python/openclaw/: __init__.py  __main__.py  cli.py  discord_bot.py  discord_notify.py  engine.py  llm.py  notify.py  scheduler.py  workflows.py
python/prompts/: position_review.md  research_synthesis.md  risk_verification.md  thesis_critique.md  thesis_scoring.md  weekly_battle_plan.md
python/research/: API_KEYS.md  __init__.py  earnings.py  edgar.py  flow.py  fred.py  news.py  news_scoring.py  pipeline.py  premarket.py  sectors.py  sentiment.py  technicals.py
python/reviewer/: __init__.py  cross_platform.py
python/schemas/: __init__.py  recommendation.py  research.py  review.py  risk.py  thesis.py
python/tests/: test_position_manager.py  test_rules.py
(+188 files in other folders)
