[workspace]
members = [
    "crates/core",
    "crates/signals",
    "crates/exchange-hyperliquid",
    "crates/data",
    "crates/strategy",
    "crates/execution",
    "crates/backtest",
    "crates/backtest-scheduler",
    "crates/token-selector",
    "crates/bot-orchestrator",
    "crates/web-api",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
