[package]
name = "algo-trade-arbitrage-cross"
version = "0.1.0"
edition = "2021"
description = "Cross-exchange arbitrage detection and execution for Kalshi/Polymarket"
license = "MIT"
readme = false

[dependencies]
algo-trade-kalshi = { path = "../exchange-kalshi" }
algo-trade-polymarket = { path = "../exchange-polymarket" }
algo-trade-core = { path = "../core" }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = "1.0"
rust_decimal = "1.38"
rust_decimal_macros = "1.38"
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
