[package]
name = "algo-trade-backtest"
version = "0.1.0"
edition = "2021"
description = "Backtesting engine for algorithmic trading strategies"
license = "MIT"
repository = "https://github.com/yourusername/algo-trade"
keywords = ["trading", "backtest", "simulation", "strategy"]
categories = ["finance"]
readme = false

[dependencies]
algo-trade-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"
chrono = "0.4"
rust_decimal = "1.33"
csv = "1.3"
polars = { version = "0.43", features = ["lazy", "parquet"] }
uuid = { version = "1.18.1", features = ["v4"] }
