[package]
name = "algo-trade-bot-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Multi-bot orchestration using actor pattern with Tokio channels"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/algo-trade"
readme = "README.md"
keywords = ["trading", "bot", "orchestration", "actor", "async"]
categories = ["asynchronous", "concurrency"]

[dependencies]
algo-trade-core = { path = "../core" }
algo-trade-data = { path = "../data" }
algo-trade-strategy = { path = "../strategy" }
algo-trade-hyperliquid = { path = "../exchange-hyperliquid" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.33"
async-trait = "0.1.89"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
