[package]
name = "algo-trade-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the Hyperliquid algorithmic trading system"
license = "MIT"
repository = "https://github.com/yourusername/algo-trade"
readme = false
keywords = ["trading", "cli", "cryptocurrency", "hyperliquid"]
categories = ["command-line-utilities", "finance"]

[[bin]]
name = "algo-trade"
path = "src/main.rs"

[dependencies]
algo-trade-core = { path = "../core" }
algo-trade-data = { path = "../data" }
algo-trade-hyperliquid = { path = "../exchange-hyperliquid" }
algo-trade-polymarket = { path = "../exchange-polymarket" }
algo-trade-signals = { path = "../signals" }
algo-trade-backtest = { path = "../backtest" }
algo-trade-backtest-scheduler = { path = "../backtest-scheduler" }
algo-trade-token-selector = { path = "../token-selector" }
algo-trade-strategy = { path = "../strategy" }
algo-trade-bot-orchestrator = { path = "../bot-orchestrator" }
algo-trade-web-api = { path = "../web-api" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
async-trait = "0.1"
tokio = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
chrono = "0.4"
csv = "1.3"
ratatui = "0.28"
crossterm = "0.28"
tui-input = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.36"
