[package]
name = "algo-trade-core"
version = "0.1.0"
edition = "2021"
description = "Core types, traits, and event system for algorithmic trading"
license = "MIT"
repository = "https://github.com/yourusername/algo-trade"
keywords = ["trading", "core", "events", "algorithmic", "finance"]
categories = ["finance"]
readme = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
rust_decimal = "1.33"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
tracing.workspace = true
figment = { version = "0.10.19", features = ["toml", "json", "env"] }
notify = "8.2.0"

[dev-dependencies]
rust_decimal_macros = "1.33"
