[package]
name = "algo-trade-data"
version = "0.1.0"
edition = "2021"
description = "Data storage and management for algorithmic trading"
license = "MIT"
repository = "https://github.com/yourusername/algo-trade"
keywords = ["trading", "data", "storage", "timeseries"]
categories = ["finance"]
readme = false

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal", "json"] }
arrow = "54.0"
parquet = "54.0"
polars = { version = "0.43", features = ["lazy", "parquet", "temporal"] }
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1.33"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
serde_json = "1.0"
