[package]
name = "algo-trade-kalshi"
version = "0.1.0"
edition = "2021"
description = "Kalshi exchange integration for statistical trading engine"
license = "MIT"
readme = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
governor = "0.6"
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.38"
rust_decimal_macros = "1.38"
async-trait = "0.1"
nonzero_ext = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
secrecy = "0.10"
zeroize = "1.7"

# RSA-PSS signing for Kalshi authentication
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
signature = "2.2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
