[package]
name = "algo-trade-polymarket"
version = "0.1.0"
edition = "2021"
description = "Polymarket CLOB integration for statistical trading engine"
license = "MIT"
readme = false

[dependencies]
algo-trade-core = { path = "../core" }
algo-trade-data = { path = "../data" }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
governor = "0.6"
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.38"
async-trait = "0.1"
nonzero_ext = "0.3"
urlencoding = "2.1"
libm = "0.2"
rust_decimal_macros = "1.38"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
parking_lot = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
secrecy = "0.10"
zeroize = "1.7"

# Ethereum address derivation (lightweight, no SDK dependencies)
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"

# Note: Full SDK integration deferred - using k256 for address derivation
# alloy = { version = "1.3", features = ["signers", "signer-local"] }
# polymarket-client-sdk = { version = "0.4", features = ["clob"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
rust_decimal_macros = "1.38"
tempfile = "3.10"
