[package]
name = "algo-trade-token-selector"
version = "0.1.0"
edition = "2021"
description = "Token selection based on backtest performance"
license = "MIT"
repository = "https://github.com/yourusername/algo-trade"
keywords = ["trading", "token", "selection"]
categories = ["finance"]
readme = false

[dependencies]
algo-trade-core = { path = "../core" }
algo-trade-data = { path = "../data" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rust_decimal = "1.33"
