[package]
name = "algo-trade-web-api"
version = "0.1.0"
edition = "2021"
description = "REST API for algorithmic trading system"
license = "MIT"
repository = "https://github.com/yourusername/algo-trade"
keywords = ["trading", "api", "rest", "web"]
categories = ["finance"]
readme = false

[dependencies]
algo-trade-bot-orchestrator = { path = "../bot-orchestrator" }
tokio = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = "1.0"
tracing = { workspace = true }
anyhow = { workspace = true }
rust_decimal = "1.38.0"
